--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,3 +1,6 @@
-title=wasteStatsApp
-appTitle=wasteStatsApp
-appDescription=App Description
+title=Waste Stats App
+appTitle=Waste Stats App
+appDescription=Helps you to track your household waste
+
+inputWasteWeight=Garbage Weight
+inputWasteWeightPlaceholder=Enter garbage weight...
