--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -4,3 +4,4 @@ appDescription=Helps you to track your household waste
 
 inputWasteWeight=Garbage Weight
 inputWasteWeightPlaceholder=Enter garbage weight...
+addWasteButton=Add
