First working KPI

--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -4,3 +4,7 @@ appDescription=Helps you to track your household waste
 
 inputWasteWeightPlaceholder=Garbage Weight
 inputWasteWeightPlaceholder=Enter garbage weight...
+
+
+# KPIs
+totalWaste= Total Waste
