switch to ui5 tooling 2.0, fixed problems with localization

--- a/webapp/i18n/i18n_de.properties
+++ b/webapp/i18n/i18n_de.properties
@@ -5,5 +5,15 @@ appDescription=Hilft dir deinen Haushaltmüll im Auge zu behalten
 inputWasteWeightPlaceholder=Müll Gewicht
 inputWasteWeightPlaceholder=Müll Gewicht eingeben (in gramm)...
 
+ORGANIC=Bio
+PAPER=Papier
+ALUMINUM=Aluminium
+DIAPERS=Windeln
+PLASTIC=Plastik
+GLASS=Glas
+OTHER=Rest
+
+chartLabelTotal=Müll in gramm
+
 # KPIs
 totalWaste= Müll Gesamt
