--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -5,6 +5,15 @@ appDescription=Helps you to track your household waste
 inputWasteWeightPlaceholder=Garbage Weight
 inputWasteWeightPlaceholder=Enter garbage weight...
 
+ORGANIC=Organic
+PAPER=Paper
+ALUMINUM=Aluminum
+DIAPERS=Diapers
+PLASTIC=Plastic
+GLASS=Glass
+OTHER=Other
+
+chartLabelTotal=Total amount of waste in gr.
 
 # KPIs
 totalWaste= Total Waste
