added translations, added support to delete entries, added swiping

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -2,11 +2,15 @@ title=Waste Stats App
 appTitle=Waste Stats App
 appDescription=Helps you to track your household waste
 
+# KPIs
+totalWaste= Total Waste
+
+# Main Input
 inputWasteWeight=Garbage Weight
 inputWasteWeightPlaceholder=Enter garbage weight...
 addWasteButton=Add
 
-
+# Waste Types
 ORGANIC=Organic
 PAPER=Paper
 ALUMINUM=Aluminum
@@ -15,4 +19,10 @@ PLASTIC=Plastic
 GLASS=Glass
 OTHER=Other
 
+#Chart
 chartLabelTotal=Total amount of waste in gr.
+
+# Table
+rowType=Type
+rowWeight=Weight
+rowDate=Date added
