--- a/webapp/i18n/i18n_de.properties
+++ b/webapp/i18n/i18n_de.properties
@@ -2,9 +2,15 @@ title=Waste Stats App
 appTitle=Waste Stats App
 appDescription=Hilft dir deinen Haushaltmüll im Auge zu behalten
 
+# KPIs
+totalWaste= Müll Gesamt
+
+# Main Input
 inputWasteWeightPlaceholder=Müll Gewicht
 inputWasteWeightPlaceholder=Müll Gewicht eingeben (in gramm)...
+addWasteButton=Hinzufügen
 
+# Waste types
 ORGANIC=Bio
 PAPER=Papier
 ALUMINUM=Aluminium
@@ -13,7 +19,10 @@ PLASTIC=Plastik
 GLASS=Glas
 OTHER=Rest
 
+#Chart
 chartLabelTotal=Müll in gramm
 
-# KPIs
-totalWaste= Müll Gesamt
+# Table
+rowType=Art
+rowWeight=Gewicht
+rowDate=Hinzugefügt am
