--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -2,9 +2,15 @@ title=Waste Stats App
 appTitle=Waste Stats App
 appDescription=Helps you to track your household waste
 
-inputWasteWeightPlaceholder=Garbage Weight
-inputWasteWeightPlaceholder=Enter garbage weight...
+# KPIs
+totalWaste= Total Waste
 
+# Main Input
+inputWasteWeight=Garbage Weight
+inputWasteWeightPlaceholder=Enter garbage weight...
+addWasteButton=Add
+
+# Waste Types
 ORGANIC=Organic
 PAPER=Paper
 ALUMINUM=Aluminum
@@ -13,7 +19,10 @@ PLASTIC=Plastic
 GLASS=Glass
 OTHER=Other
 
+#Chart
 chartLabelTotal=Total amount of waste in gr.
 
-# KPIs
-totalWaste= Total Waste
+# Table
+rowType=Type
+rowWeight=Weight
+rowDate=Date added
