--- a/webapp/i18n/i18n_de.properties
+++ b/webapp/i18n/i18n_de.properties
@@ -19,6 +19,13 @@ PLASTIC=Plastik
 GLASS=Glas
 OTHER=Rest
 
+#Toolbar
+toolBarTitle=Haushaltsmüll
+ttpBarChart=Zeige Balkendiagramm
+ttpDonutChart=Zeige Kuchendiagramm
+ttpChartTable=Zeige Diagramme und Tabelle
+ttpTable=Zeige Tabelle
+
 #Chart
 chartLabelTotal=Müll in gramm
 
