--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -19,6 +19,13 @@ PLASTIC=Plastic
 GLASS=Glass
 OTHER=Other
 
+#Toolbar
+toolBarTitle=Household Garbage
+ttpBarChart=Show bar chart
+ttpDonutChart=Show donut chart
+ttpChartTable=Show chart and table
+ttpTable=Show table
+
 #Chart
 chartLabelTotal=Total amount of waste in gr.
 
