--- a/webapp/i18n/i18n_de_DE.properties
+++ b/webapp/i18n/i18n_de_DE.properties
@@ -27,7 +27,7 @@ ttpChartTable=Zeige Diagramme und Tabelle
 ttpTable=Zeige Tabelle
 
 #Chart
-chartLabelTotal=Müll in gramm
+chartLabelTotal=Müll in Kg
 
 # Table
 rowType=Art
