--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -27,7 +27,7 @@ ttpChartTable=Show chart and table
 ttpTable=Show table
 
 #Chart
-chartLabelTotal=Total amount of waste in gr.
+chartLabelTotal=Total amount of waste in kg.
 
 # Table
 rowType=Type
