--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -7,7 +7,7 @@ totalWaste= Total Waste
 
 # Main Input
 inputWasteWeight=Garbage Weight
-inputWasteWeightPlaceholder=Enter garbage weight...
+inputWasteWeightPlaceholder=Enter garbage weight in gramm...
 addWasteButton=Add
 
 # Waste Types
