fixed data loading

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,9 +1,9 @@
-title=Waste Stats App
-appTitle=Waste Stats App
+title=Trasta App
+appTitle=Trasta App
 appDescription=Helps you to track your household waste
 
 # KPIs
-totalWaste= Total Waste
+totalWaste=Total Waste
 
 # Main Input
 inputWasteWeight=Garbage Weight
