--- a/webapp/i18n/i18n_de.properties
+++ b/webapp/i18n/i18n_de.properties
@@ -1,9 +1,9 @@
-title=Waste Stats App
-appTitle=Waste Stats App
+title=Trasta App
+appTitle=Trasta App
 appDescription=Hilft dir deinen Haushaltmüll im Auge zu behalten
 
 # KPIs
-totalWaste= Müll Gesamt
+totalWaste=Müll Gesamt
 
 # Main Input
 inputWasteWeightPlaceholder=Müll Gewicht
