Support display by month + refactoring

--- a/webapp/i18n/i18n_de.properties
+++ b/webapp/i18n/i18n_de.properties
@@ -26,6 +26,11 @@ ttpDonutChart=Zeige Kuchendiagramm
 ttpChartTable=Zeige Diagramme und Tabelle
 ttpTable=Zeige Tabelle
 
+## Select Data Display Mode
+ttpSelect=Auswahl wie der Müll angezeigt werden soll
+TYPE=Pro Typ
+MONTH=Pro Monat
+
 #Chart
 chartLabelTotal=Müll in Kg
 
