--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -1,13 +1,13 @@
 title=Trasta App
 appTitle=Trasta App
-appDescription=Helps you to track your household waste
+appDescription=Helps you to track your household trash
 
 # KPIs
-totalWaste=Total Waste
+totalWaste=Total Trash
 
 # Main Input
-inputWasteWeight=Garbage Weight
-inputWasteWeightPlaceholder=Enter garbage weight in gramm...
+inputWasteWeight=Trash Weight
+inputWasteWeightPlaceholder=Enter trash weight in gramm...
 addWasteButton=Add
 
 # Waste Types
@@ -20,14 +20,19 @@ GLASS=Glass
 OTHER=Other
 
 #Toolbar
-toolBarTitle=Household Garbage
+toolBarTitle=Household Trash
 ttpBarChart=Show bar chart
 ttpDonutChart=Show donut chart
 ttpChartTable=Show chart and table
 ttpTable=Show table
 
+## Select Data Display Mode
+ttpSelect=Select how to display your trash
+TYPE=Per Type
+MONTH=Per Month
+
 #Chart
-chartLabelTotal=Total amount of waste in kg.
+chartLabelTotal=Total amount of trash in kg.
 
 # Table
 rowType=Type
