calculation per month and type added; new chart type (stackedBar)

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -23,6 +23,7 @@ OTHER=Other
 toolBarTitle=Household Trash
 ttpBarChart=Show bar chart
 ttpDonutChart=Show donut chart
+ttpStackedBarChart=Show stacked bar chart
 ttpChartTable=Show chart and table
 ttpTable=Show table
 
@@ -30,6 +31,7 @@ ttpTable=Show table
 ttpSelect=Select how to display your trash
 TYPE=Per Type
 MONTH=Per Month
+MONTHANDTYPE=Per month and type
 
 #Chart
 chartLabelTotal=Total amount of trash in kg.
