--- a/webapp/i18n/i18n_de.properties
+++ b/webapp/i18n/i18n_de.properties
@@ -23,6 +23,7 @@ OTHER=Rest
 toolBarTitle=Haushaltsmüll
 ttpBarChart=Zeige Balkendiagramm
 ttpDonutChart=Zeige Kuchendiagramm
+ttpStackedBarChart=Zeige Balkendiagramm
 ttpChartTable=Zeige Diagramme und Tabelle
 ttpTable=Zeige Tabelle
 
@@ -30,6 +31,7 @@ ttpTable=Zeige Tabelle
 ttpSelect=Auswahl wie der Müll angezeigt werden soll
 TYPE=Pro Typ
 MONTH=Pro Monat
+MONTHANDTYPE=Pro Monat und Typ
 
 #Chart
 chartLabelTotal=Müll in Kg
